fix: link card text overflow

--- a/src/stylesheets/LinkCard.scss
+++ b/src/stylesheets/LinkCard.scss
@@ -4,11 +4,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   .link-card {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    max-width: 79vw;
     padding: 1rem 0;
     background-color: #fff;
     font-size: 18px;
@@ -17,6 +19,7 @@
     margin-bottom: 1rem;
     .full-link {
       color: $very-dark-blue;
+      max-width: 60%;
       margin: 0 2rem;
     }
     span {
@@ -25,10 +28,10 @@
       text-overflow: ellipsis;
     }
     .short-link-container {
-      width: 60%;
+      max-width: 60%;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: flex-end;
       .short-link {
         color: $cyan;
         height: fit-content;
@@ -52,6 +55,7 @@
 @media screen and (max-width: 840px) {
   .links-list {
     margin-top: 2rem;
+    align-items: flex-start;
     .link-card {
       flex-direction: column;
       align-items: flex-start;
@@ -60,6 +64,7 @@
         margin: 0;
         margin-bottom: 1rem;
         width: 90%;
+        max-width: 90%;
         border-bottom: 1px solid $gray;
         padding-bottom: 1rem;
       }
@@ -70,6 +75,7 @@
       .short-link-container {
         flex-direction: column;
         width: 100%;
+        max-width: 100%;
         .short-link {
           width: 90%;
           margin: 0;
